# template-vcpkg-template

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: README.md
lib/: README.md
src/: README.md  main.cpp
tests/: CMakeLists.txt  README.md  test.cpp
